added login and auth routes for login function to server

--- a/Server/package.json
+++ b/Server/package.json
@@ -6,6 +6,7 @@
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "joi": "^17.3.0",
+    "jsonwebtoken": "^8.5.1",
     "mongodb": "^3.6.3",
     "mongoose": "^5.11.13",
     "node": "^15.4.0",
