--- a/Client/capstone/package.json
+++ b/Client/capstone/package.json
@@ -10,6 +10,7 @@
     "node": "^15.7.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-images-upload": "^1.2.8",
     "react-scripts": "4.0.1",
     "web-vitals": "^0.2.4"
   },
