--- a/Client/capstone/package.json
+++ b/Client/capstone/package.json
@@ -10,9 +10,11 @@
     "node": "^15.7.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-hook-geolocation": "^1.0.7",
     "react-images-upload": "^1.2.8",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
+    "start": "^5.1.0",
     "web-vitals": "^0.2.4"
   },
   "scripts": {
