--- a/Client/capstone/package.json
+++ b/Client/capstone/package.json
@@ -7,12 +7,15 @@
     "@testing-library/jest-dom": "^5.11.9",
     "@testing-library/react": "^11.2.3",
     "@testing-library/user-event": "^12.6.2",
+    "google-maps-react": "^2.0.6",
     "multer": "^1.4.2",
     "node": "^15.7.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-google-maps": "^9.4.5",
     "react-hook-geolocation": "^1.0.7",
     "react-images-upload": "^1.2.8",
+    "react-places-autocomplete": "^7.3.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
     "start": "^5.1.0",
