--- a/Client/capstone/package.json
+++ b/Client/capstone/package.json
@@ -11,6 +11,7 @@
     "multer": "^1.4.2",
     "node": "^15.7.0",
     "react": "^17.0.1",
+    "react-bootstrap": "^1.5.0",
     "react-dom": "^17.0.1",
     "react-google-maps": "^9.4.5",
     "react-hook-geolocation": "^1.0.7",
@@ -19,6 +20,7 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
     "start": "^5.1.0",
+    "styled-components": "^5.2.1",
     "web-vitals": "^0.2.4"
   },
   "scripts": {
